peach/app/blog-api/config/httproute-ik-am.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: blog-api-ik-am
  namespace: blog
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: blog-api
    app.kubernetes.io/part-of: blog-api
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - api.ik.am
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: blog-api
      port: 80
